lib/gen/featuresearch/parser/antlr/featuresearch_parser.go
// Code generated from antlr/FeatureSearch.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // FeatureSearch

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type FeatureSearchParser struct {
	*antlr.BaseParser
}

var FeatureSearchParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func featuresearchParserInit() {
	staticData := &FeatureSearchParserStaticData
	staticData.LiteralNames = []string{
		"", "'available_on'", "'baseline_status'", "'available_date'", "'baseline_date'",
		"'name'", "'desc'", "'group'", "'snapshot'", "'id'", "'saved'", "'hotlist'",
		"'..'", "'('", "')'", "'AND'", "'OR'", "'-'", "':'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "AND", "OR",
		"NOT", "COLON", "WS", "BROWSER_NAME", "BASELINE_STATUS", "DATE", "ANY_VALUE",
	}
	staticData.RuleNames = []string{
		"available_on_term", "baseline_status_term", "available_date_term",
		"baseline_date_term", "name_term", "description_term", "group_term",
		"snapshot_term", "id_term", "saved_term", "hotlist_term", "term", "date_range_query",
		"generic_search_term", "search_criteria", "parenthesizedCriteria", "combined_search_criteria",
		"operator", "query",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// FeatureSearchParserInit initializes any static state used to implement FeatureSearchParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewFeatureSearchParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func FeatureSearchParserInit() {
	staticData := &FeatureSearchParserStaticData
	staticData.once.Do(featuresearchParserInit)
}

// NewFeatureSearchParser produces a new parser instance for the optional input antlr.TokenStream.
func NewFeatureSearchParser(input antlr.TokenStream) *FeatureSearchParser {
	FeatureSearchParserInit()
	this := new(FeatureSearchParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &FeatureSearchParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "FeatureSearch.g4"

	return this
}

// FeatureSearchParser tokens.
const (
	FeatureSearchParserEOF             = antlr.TokenEOF
	FeatureSearchParserT__0            = 1
	FeatureSearchParserT__1            = 2
	FeatureSearchParserT__2            = 3
	FeatureSearchParserT__3            = 4
	FeatureSearchParserT__4            = 5
	FeatureSearchParserT__5            = 6
	FeatureSearchParserT__6            = 7
	FeatureSearchParserT__7            = 8
	FeatureSearchParserT__8            = 9
	FeatureSearchParserT__9            = 10
	FeatureSearchParserT__10           = 11
	FeatureSearchParserT__11           = 12
	FeatureSearchParserT__12           = 13
	FeatureSearchParserT__13           = 14
	FeatureSearchParserAND             = 15
	FeatureSearchParserOR              = 16
	FeatureSearchParserNOT             = 17
	FeatureSearchParserCOLON           = 18
	FeatureSearchParserWS              = 19
	FeatureSearchParserBROWSER_NAME    = 20
	FeatureSearchParserBASELINE_STATUS = 21
	FeatureSearchParserDATE            = 22
	FeatureSearchParserANY_VALUE       = 23
)

// FeatureSearchParser rules.
const (
	FeatureSearchParserRULE_available_on_term        = 0
	FeatureSearchParserRULE_baseline_status_term     = 1
	FeatureSearchParserRULE_available_date_term      = 2
	FeatureSearchParserRULE_baseline_date_term       = 3
	FeatureSearchParserRULE_name_term                = 4
	FeatureSearchParserRULE_description_term         = 5
	FeatureSearchParserRULE_group_term               = 6
	FeatureSearchParserRULE_snapshot_term            = 7
	FeatureSearchParserRULE_id_term                  = 8
	FeatureSearchParserRULE_saved_term               = 9
	FeatureSearchParserRULE_hotlist_term             = 10
	FeatureSearchParserRULE_term                     = 11
	FeatureSearchParserRULE_date_range_query         = 12
	FeatureSearchParserRULE_generic_search_term      = 13
	FeatureSearchParserRULE_search_criteria          = 14
	FeatureSearchParserRULE_parenthesizedCriteria    = 15
	FeatureSearchParserRULE_combined_search_criteria = 16
	FeatureSearchParserRULE_operator                 = 17
	FeatureSearchParserRULE_query                    = 18
)

// IAvailable_on_termContext is an interface to support dynamic dispatch.
type IAvailable_on_termContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	COLON() antlr.TerminalNode
	BROWSER_NAME() antlr.TerminalNode

	// IsAvailable_on_termContext differentiates from other interfaces.
	IsAvailable_on_termContext()
}

type Available_on_termContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAvailable_on_termContext() *Available_on_termContext {
	var p = new(Available_on_termContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FeatureSearchParserRULE_available_on_term
	return p
}

func InitEmptyAvailable_on_termContext(p *Available_on_termContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FeatureSearchParserRULE_available_on_term
}

func (*Available_on_termContext) IsAvailable_on_termContext() {}

func NewAvailable_on_termContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Available_on_termContext {
	var p = new(Available_on_termContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = FeatureSearchParserRULE_available_on_term

	return p
}

func (s *Available_on_termContext) GetParser() antlr.Parser { return s.parser }

func (s *Available_on_termContext) COLON() antlr.TerminalNode {
	return s.GetToken(FeatureSearchParserCOLON, 0)
}

func (s *Available_on_termContext) BROWSER_NAME() antlr.TerminalNode {
	return s.GetToken(FeatureSearchParserBROWSER_NAME, 0)
}

func (s *Available_on_termContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Available_on_termContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Available_on_termContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case FeatureSearchVisitor:
		return t.VisitAvailable_on_term(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *FeatureSearchParser) Available_on_term() (localctx IAvailable_on_termContext) {
	localctx = NewAvailable_on_termContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, FeatureSearchParserRULE_available_on_term)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(38)
		p.Match(FeatureSearchParserT__0)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(39)
		p.Match(FeatureSearchParserCOLON)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(40)
		p.Match(FeatureSearchParserBROWSER_NAME)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IBaseline_status_termContext is an interface to support dynamic dispatch.
type IBaseline_status_termContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	COLON() antlr.TerminalNode
	BASELINE_STATUS() antlr.TerminalNode

	// IsBaseline_status_termContext differentiates from other interfaces.
	IsBaseline_status_termContext()
}

type Baseline_status_termContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBaseline_status_termContext() *Baseline_status_termContext {
	var p = new(Baseline_status_termContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FeatureSearchParserRULE_baseline_status_term
	return p
}

func InitEmptyBaseline_status_termContext(p *Baseline_status_termContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FeatureSearchParserRULE_baseline_status_term
}

func (*Baseline_status_termContext) IsBaseline_status_termContext() {}

func NewBaseline_status_termContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Baseline_status_termContext {
	var p = new(Baseline_status_termContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = FeatureSearchParserRULE_baseline_status_term

	return p
}

func (s *Baseline_status_termContext) GetParser() antlr.Parser { return s.parser }

func (s *Baseline_status_termContext) COLON() antlr.TerminalNode {
	return s.GetToken(FeatureSearchParserCOLON, 0)
}

func (s *Baseline_status_termContext) BASELINE_STATUS() antlr.TerminalNode {
	return s.GetToken(FeatureSearchParserBASELINE_STATUS, 0)
}

func (s *Baseline_status_termContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Baseline_status_termContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Baseline_status_termContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case FeatureSearchVisitor:
		return t.VisitBaseline_status_term(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *FeatureSearchParser) Baseline_status_term() (localctx IBaseline_status_termContext) {
	localctx = NewBaseline_status_termContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, FeatureSearchParserRULE_baseline_status_term)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(42)
		p.Match(FeatureSearchParserT__1)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(43)
		p.Match(FeatureSearchParserCOLON)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(44)
		p.Match(FeatureSearchParserBASELINE_STATUS)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IAvailable_date_termContext is an interface to support dynamic dispatch.
type IAvailable_date_termContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllCOLON() []antlr.TerminalNode
	COLON(i int) antlr.TerminalNode
	BROWSER_NAME() antlr.TerminalNode
	Date_range_query() IDate_range_queryContext

	// IsAvailable_date_termContext differentiates from other interfaces.
	IsAvailable_date_termContext()
}

type Available_date_termContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAvailable_date_termContext() *Available_date_termContext {
	var p = new(Available_date_termContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FeatureSearchParserRULE_available_date_term
	return p
}

func InitEmptyAvailable_date_termContext(p *Available_date_termContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FeatureSearchParserRULE_available_date_term
}

func (*Available_date_termContext) IsAvailable_date_termContext() {}

func NewAvailable_date_termContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Available_date_termContext {
	var p = new(Available_date_termContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = FeatureSearchParserRULE_available_date_term

	return p
}

func (s *Available_date_termContext) GetParser() antlr.Parser { return s.parser }

func (s *Available_date_termContext) AllCOLON() []antlr.TerminalNode {
	return s.GetTokens(FeatureSearchParserCOLON)
}

func (s *Available_date_termContext) COLON(i int) antlr.TerminalNode {
	return s.GetToken(FeatureSearchParserCOLON, i)
}

func (s *Available_date_termContext) BROWSER_NAME() antlr.TerminalNode {
	return s.GetToken(FeatureSearchParserBROWSER_NAME, 0)
}

func (s *Available_date_termContext) Date_range_query() IDate_range_queryContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDate_range_queryContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDate_range_queryContext)
}

func (s *Available_date_termContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Available_date_termContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Available_date_termContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case FeatureSearchVisitor:
		return t.VisitAvailable_date_term(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *FeatureSearchParser) Available_date_term() (localctx IAvailable_date_termContext) {
	localctx = NewAvailable_date_termContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, FeatureSearchParserRULE_available_date_term)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(46)
		p.Match(FeatureSearchParserT__2)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(47)
		p.Match(FeatureSearchParserCOLON)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(48)
		p.Match(FeatureSearchParserBROWSER_NAME)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(49)
		p.Match(FeatureSearchParserCOLON)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

	{
		p.SetState(50)
		p.Date_range_query()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IBaseline_date_termContext is an interface to support dynamic dispatch.
type IBaseline_date_termContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	COLON() antlr.TerminalNode
	Date_range_query() IDate_range_queryContext

	// IsBaseline_date_termContext differentiates from other interfaces.
	IsBaseline_date_termContext()
}

type Baseline_date_termContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBaseline_date_termContext() *Baseline_date_termContext {
	var p = new(Baseline_date_termContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FeatureSearchParserRULE_baseline_date_term
	return p
}

func InitEmptyBaseline_date_termContext(p *Baseline_date_termContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FeatureSearchParserRULE_baseline_date_term
}

func (*Baseline_date_termContext) IsBaseline_date_termContext() {}

func NewBaseline_date_termContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Baseline_date_termContext {
	var p = new(Baseline_date_termContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = FeatureSearchParserRULE_baseline_date_term

	return p
}

func (s *Baseline_date_termContext) GetParser() antlr.Parser { return s.parser }

func (s *Baseline_date_termContext) COLON() antlr.TerminalNode {
	return s.GetToken(FeatureSearchParserCOLON, 0)
}

func (s *Baseline_date_termContext) Date_range_query() IDate_range_queryContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDate_range_queryContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDate_range_queryContext)
}

func (s *Baseline_date_termContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Baseline_date_termContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Baseline_date_termContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case FeatureSearchVisitor:
		return t.VisitBaseline_date_term(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *FeatureSearchParser) Baseline_date_term() (localctx IBaseline_date_termContext) {
	localctx = NewBaseline_date_termContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, FeatureSearchParserRULE_baseline_date_term)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(52)
		p.Match(FeatureSearchParserT__3)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(53)
		p.Match(FeatureSearchParserCOLON)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

	{
		p.SetState(54)
		p.Date_range_query()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IName_termContext is an interface to support dynamic dispatch.
type IName_termContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	COLON() antlr.TerminalNode
	ANY_VALUE() antlr.TerminalNode

	// IsName_termContext differentiates from other interfaces.
	IsName_termContext()
}

type Name_termContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyName_termContext() *Name_termContext {
	var p = new(Name_termContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FeatureSearchParserRULE_name_term
	return p
}

func InitEmptyName_termContext(p *Name_termContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FeatureSearchParserRULE_name_term
}

func (*Name_termContext) IsName_termContext() {}

func NewName_termContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Name_termContext {
	var p = new(Name_termContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = FeatureSearchParserRULE_name_term

	return p
}

func (s *Name_termContext) GetParser() antlr.Parser { return s.parser }

func (s *Name_termContext) COLON() antlr.TerminalNode {
	return s.GetToken(FeatureSearchParserCOLON, 0)
}

func (s *Name_termContext) ANY_VALUE() antlr.TerminalNode {
	return s.GetToken(FeatureSearchParserANY_VALUE, 0)
}

func (s *Name_termContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Name_termContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Name_termContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case FeatureSearchVisitor:
		return t.VisitName_term(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *FeatureSearchParser) Name_term() (localctx IName_termContext) {
	localctx = NewName_termContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, FeatureSearchParserRULE_name_term)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(56)
		p.Match(FeatureSearchParserT__4)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(57)
		p.Match(FeatureSearchParserCOLON)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(58)
		p.Match(FeatureSearchParserANY_VALUE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDescription_termContext is an interface to support dynamic dispatch.
type IDescription_termContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	COLON() antlr.TerminalNode
	ANY_VALUE() antlr.TerminalNode

	// IsDescription_termContext differentiates from other interfaces.
	IsDescription_termContext()
}

type Description_termContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDescription_termContext() *Description_termContext {
	var p = new(Description_termContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FeatureSearchParserRULE_description_term
	return p
}

func InitEmptyDescription_termContext(p *Description_termContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FeatureSearchParserRULE_description_term
}

func (*Description_termContext) IsDescription_termContext() {}

func NewDescription_termContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Description_termContext {
	var p = new(Description_termContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = FeatureSearchParserRULE_description_term

	return p
}

func (s *Description_termContext) GetParser() antlr.Parser { return s.parser }

func (s *Description_termContext) COLON() antlr.TerminalNode {
	return s.GetToken(FeatureSearchParserCOLON, 0)
}

func (s *Description_termContext) ANY_VALUE() antlr.TerminalNode {
	return s.GetToken(FeatureSearchParserANY_VALUE, 0)
}

func (s *Description_termContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Description_termContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Description_termContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case FeatureSearchVisitor:
		return t.VisitDescription_term(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *FeatureSearchParser) Description_term() (localctx IDescription_termContext) {
	localctx = NewDescription_termContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, FeatureSearchParserRULE_description_term)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(60)
		p.Match(FeatureSearchParserT__5)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(61)
		p.Match(FeatureSearchParserCOLON)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(62)
		p.Match(FeatureSearchParserANY_VALUE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IGroup_termContext is an interface to support dynamic dispatch.
type IGroup_termContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	COLON() antlr.TerminalNode
	ANY_VALUE() antlr.TerminalNode

	// IsGroup_termContext differentiates from other interfaces.
	IsGroup_termContext()
}

type Group_termContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyGroup_termContext() *Group_termContext {
	var p = new(Group_termContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FeatureSearchParserRULE_group_term
	return p
}

func InitEmptyGroup_termContext(p *Group_termContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = FeatureSearchParserRULE_group_term
}

func (*Group_termContext) IsGroup_termContext() {}

func NewGroup_termContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *Group_termContext {
	var p = new(Group_termContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = FeatureSearchParserRULE_group_term

	return p
}

func (s *Group_termContext) GetParser() antlr.Parser { return s.parser }

func (s *Group_termContext) COLON() antlr.TerminalNode {
	return s.GetToken(FeatureSearchParserCOLON, 0)
}

func (s *Group_termContext) ANY_VALUE() antlr.TerminalNode {
	return s.GetToken(FeatureSearchParserANY_VALUE, 0)
}

func (s *Group_termContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *Group_termContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *Group_termContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case FeatureSearchVisitor:
		return t.VisitGroup_term(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *FeatureSearchParser) Group_term() (localctx IGroup_termContext) {
	localctx = NewGroup_termContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, FeatureSearchParserRULE_group_term)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(64)
		p.Match(FeatureSearchParserT__6)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(65)
		p.Match(FeatureSearchParserCOLON)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(66)
		p.Match(FeatureSearchParserANY_VALUE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ISnapshot_termContext is an interface to support dynamic dispatch.
type ISnapshot_termContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	COLON() antlr.TerminalNode
	ANY_VALUE() antlr.TerminalNode

	// IsSnapshot_termContext differentiates from other interfaces.
	IsSnapshot_termContext()
}
